--- a/index.html
+++ b/index.html
@@ -6,8 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader-board</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- header start -->
+    <header>
+
+    </header>
+    <!-- header end -->
+    <main>
+        <section>
+            <div class="top-players">
+                <div class="players">
+                    <player>
+                        <img src="../images/players/player-1.png" alt="">
+                        <h3>Top Player-1</h3>
+                    </player>
+                    <player>
+                        <img src="../images/players/player-2.png" alt="">
+                        <h3>Top Player-2</h3>
+                    </player>
+                    <player>
+                        <img src="../images/players/player-3.png" alt="">
+                        <h3>Top Player-3</h3>
+                    </player>
+                    <player>
+                        <img src="../images/players/player-4.png" alt="">
+                        <h3>Top Player-4</h3>
+                    </player>
+                    <player>
+                        <img src="../images/players/player-5.png" alt="">
+                        <h3>Top Player-5</h3>
+                    </player>
+                    <player>
+                        <img src="../images/players/player-6.png" alt="">
+                        <h3>Top Player-6</h3>
+                    </player>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
