--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- header start -->
@@ -17,35 +17,37 @@
     </header>
     <!-- header end -->
     <main>
-        <section>
+        <section class="container">
             <div class="top-players">
+                <h2 class="title">Top Players</h2>
                 <div class="players">
                     <player>
                         <img src="../images/players/player-1.png" alt="">
-                        <h3>Top Player-1</h3>
+                        <h3 class="pname" class="pname">Top Player-1</h3>
                     </player>
                     <player>
                         <img src="../images/players/player-2.png" alt="">
-                        <h3>Top Player-2</h3>
+                        <h3 class="pname">Top Player-2</h3>
                     </player>
                     <player>
                         <img src="../images/players/player-3.png" alt="">
-                        <h3>Top Player-3</h3>
+                        <h3 class="pname">Top Player-3</h3>
                     </player>
                     <player>
                         <img src="../images/players/player-4.png" alt="">
-                        <h3>Top Player-4</h3>
+                        <h3 class="pname">Top Player-4</h3>
                     </player>
                     <player>
                         <img src="../images/players/player-5.png" alt="">
-                        <h3>Top Player-5</h3>
+                        <h3 class="pname">Top Player-5</h3>
                     </player>
                     <player>
                         <img src="../images/players/player-6.png" alt="">
-                        <h3>Top Player-6</h3>
+                        <h3 class="pname">Top Player-6</h3>
                     </player>
                 </div>
             </div>
+            <hr>
         </section>
     </main>
 </body>
