--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
                 </div>
             </div>
             <hr>
+            <div class="top-vlogs">
+                <h2 class="title">
+                    Top-Blogs
+                </h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            
+                        </div>
+                    </article>
+                </div>
+            </div>
         </section>
     </main>
 </body>
