--- a/index.html
+++ b/index.html
@@ -23,39 +23,78 @@
                 <div class="players">
                     <player>
                         <img src="../images/players/player-1.png" alt="">
-                        <h3 class="pname" class="pname">Top Player-1</h3>
+                        <h3 class="pname" class="pname">John Smith</h3>
                     </player>
                     <player>
                         <img src="../images/players/player-2.png" alt="">
-                        <h3 class="pname">Top Player-2</h3>
+                        <h3 class="pname">Pro Rasel</h3>
                     </player>
                     <player>
                         <img src="../images/players/player-3.png" alt="">
-                        <h3 class="pname">Top Player-3</h3>
+                        <h3 class="pname">Abu Sufian</h3>
                     </player>
                     <player>
                         <img src="../images/players/player-4.png" alt="">
-                        <h3 class="pname">Top Player-4</h3>
+                        <h3 class="pname">Shajedul Karim</h3>
                     </player>
                     <player>
                         <img src="../images/players/player-5.png" alt="">
-                        <h3 class="pname">Top Player-5</h3>
+                        <h3 class="pname">Maruf Ahmed</h3>
                     </player>
                     <player>
                         <img src="../images/players/player-6.png" alt="">
-                        <h3 class="pname">Top Player-6</h3>
+                        <h3 class="pname">Mujahid</h3>
                     </player>
                 </div>
             </div>
             <hr>
-            <div class="top-vlogs">
+            <div class="top-blogs">
                 <h2 class="title">
-                    Top-Blogs
+                    Top Blogs
                 </h2>
                 <div class="blogs">
                     <article class="blog">
                         <div class="thumbnail">
-                            
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                13 of My Favorite UI/UX Goodies
+                            </h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                UI cheat sheet: list vs grids
+                            </h3>
+                            <p class="blog-author">By <a href="">Tess Gadd</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                7 typography tips for interface design
+                            </h3>
+                            <p class="blog-author">By <a href="">Jeremiah Lam</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                Your logo is copied
+                            </h3>
+                            <p class="blog-author">By <a href="">Ferdinand Vogler</a></p>
                         </div>
                     </article>
                 </div>
