--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader-board</title>
+    <script src="https://kit.fontawesome.com/e4deb5fc18.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -97,6 +98,87 @@
                             <p class="blog-author">By <a href="">Ferdinand Vogler</a></p>
                         </div>
                     </article>
+                </div>
+            </div>
+        </section>
+        <!-- Latest Course Section -->
+        <section class="container-2">
+            <h2 class="title"> Latest Course </h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <div class="course-title">
+                            <h3>React - The Complete Guide 2022</h3>
+                            <p class="course-author">Reed Krakoff.</p>
+                            <div class="course-info">
+                                <div>
+                                    <i class="fas fa-star fill"></i>
+                                    <i class="fas fa-star fill"></i>
+                                    <i class="fas fa-star fill"></i>
+                                    <i class="fas fa-star fill"></i>
+                                    <i class="fas fa-star empty"></i>
+                                    <span>4.5</span>
+                                </div>
+                                <div class="duration">
+                                    <i class="far fa-clock"></i>
+                                    01.30 hr
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <div class="course-title">
+                            <h3>Powerpoint 2022 Master Powerpoint Cour</h3>
+                            <p class="course-author">Walter Scott</p>
+                            <div class="course-info">
+                                <div>
+                                    <i class="fas fa-star fill"></i>
+                                    <i class="fas fa-star fill"></i>
+                                    <i class="fas fa-star fill"></i>
+                                    <i class="fas fa-star fill"></i>
+                                    <i class="fas fa-star empty"></i>
+                                    <span>4.5</span>
+                                </div>
+                                <div class="duration">
+                                    <i class="far fa-clock"></i>
+                                    01.10 hr
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <div class="course-title">
+                            <h3>The Complete JavaScript Course 2022</h3>
+                            <p class="course-author">Reed Krakoff.</p>
+                            <div class="course-info">
+                                <div>
+                                    <i class="fas fa-star fill"></i>
+                                    <i class="fas fa-star fill"></i>
+                                    <i class="fas fa-star fill"></i>
+                                    <i class="fas fa-star fill"></i>
+                                    <i class="fas fa-star empty"></i>
+                                    <span>4.5</span>
+                                </div>
+                                <div class="duration">
+                                    <i class="far fa-clock"></i>
+                                    02.50 hr
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
